SF Primes/src/objects/AMAAP_Strategy__c.object
<CustomObject>
    <description>Automotive Marketing Association Account Plan Strategy Detail.  Child object to Account Plan.</description>
    <fields>
        <fullName>AMA_Funded_Budget__c</fullName>
        <label>AMA Funded Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <label>Account Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Account_Plan__c.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>AMA Account Plan</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>AMAAP Strategies</relationshipLabel>
        <relationshipName>AMAAP_Strategy_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AMAAP_Strategy_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>AMAAP Strategies</relationshipLabel>
        <relationshipName>AMAAP_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conquest_Target__c</fullName>
        <label>Conquest Target</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst_2_Email__c</fullName>
        <label>LMA Analyst 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst_Email__c</fullName>
        <label>LMA Analyst Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Media_Planned_Date__c</fullName>
        <label>Media Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>Acadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalanche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacrosse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500 Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500HD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreRoll_Budget__c</fullName>
        <label>PreRoll Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regional_Funded_Budget__c</fullName>
        <label>Regional Funded Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Set the Status to &quot;Future&quot; for Strategy totals to show in the &quot;Future&quot; budget fields on the Account Plan. Future Strategy records that have passed today&apos;s date will be automatically converted to &quot;Open&quot;. Strategies that are expired will be set to Closed.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <formula>AMA_Funded_Budget__c +  Regional_Funded_Budget__c + PreRoll_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WebID__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>AMAAP Strategies</relationshipLabel>
        <relationshipName>AMAAP_Strategy_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AMAAP Strategy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>Account__c</columns>
        <columns>WebID__c</columns>
        <columns>Model__c</columns>
        <columns>Brand__c</columns>
        <columns>Strategy__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Conquest_Target__c</columns>
        <columns>Status__c</columns>
        <columns>Notes__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000}</displayFormat>
        <label>Strategy Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMAAP Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>